--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   "dependencies": {
     "@metaplex-foundation/amman": "0.10.0",
     "@metaplex-foundation/beet": "^0.7.1",
-    "@metaplex-foundation/mpl-bubblegum": "^0.1.4",
-    "@metaplex-foundation/mpl-token-metadata": "^2.2.0",
+    "@metaplex-foundation/mpl-bubblegum": "^0.3.0",
+    "@metaplex-foundation/mpl-token-metadata": "^2.5.1",
     "@metaplex-foundation/rustbin": "^0.3.1",
-    "@metaplex-foundation/solita": "^0.12.2",
+    "@metaplex-foundation/solita": "^0.18.0",
     "@project-serum/anchor": "0.24.2",
-    "@solana/spl-account-compression": "^0.1.0",
+    "@solana/spl-account-compression": "^0.1.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.50.1",
-    "@sorend-solana/gummyroll": "^0.0.6",
     "@sorend-solana/utils": "^0.0.5",
+    "borsh": "^0.7.0",
     "bs58": "^5.0.0",
     "js-sha3": "^0.8.0",
     "typescript-collections": "^1.3.3"
