--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@metaplex-foundation/amman": "0.12.0",
     "@metaplex-foundation/beet": "^0.7.1",
+    "@metaplex-foundation/js": "^0.18.0",
     "@metaplex-foundation/mpl-bubblegum": "^0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
     "@metaplex-foundation/rustbin": "^0.3.1",
